--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,7 +307,10 @@ jobs:
       - run:
           name: Save list of files that have changes relative to the parent branch
           command: >
-            parent_branch=`git log --decorate --simplify-by-decoration --oneline | grep -v "HEAD" | head -n 1 | sed -r 's/^\w+\s\(origin\/([^,)]+).+$/\1/'`;
+            parent_commit=`git log --decorate --simplify-by-decoration --oneline | grep -v "HEAD" | head -n 1`;
+            echo "parent commit: $parent_commit";
+            parent_branch=`echo "$parent_commit" | sed -r 's/^\w+\s\(origin\/([^,)]+).+$/\1/'`;
+            echo "parent branch: $parent_branch";
             git diff --name-only "$parent_branch" > files_with_changes.txt
       - run:
           name: Remove .git directory (not needed for tests)
